MNEMOSYNE 0.9.10

(Note that for Windows users we recommend uninstalling the previous 
version before doing an upgrade.)

-respect duplicate handling configuration options when importing (reported 
 by lebowski_404).
-changed shortcut for 'Show statistics' from Alt-S to Ctrl-S so as not to
 interfere with 'Show answer' (reported by Gintautas Miliauskas).
-fix bug when showing the statistics for an empty database (reported by 
 Gintautas Miliauskas).


MNEMOSYNE 0.9.9 : 2007-08-16

-added 'Show statistics' menu option, showing the schedule for the
 next week, the distribution of the items over the grades and the number 
 of items for each category.
-added simple per-item statistics in pop-up menu in 'edit items'.
-performance improvements.
-new latex tags, based on code by Christopher Gilbreth and bug reports by 
 Jamned:
   -<$>...</$>         : for inline equations
   -<$$>...</$$>       : for centered equations on a separate line
   -<latex>...</latex> : for latex code not in a certain environment
 This means that the functionality of the old <latex>...</latex> tags is
 now taken over by <$>...</$>. However, there is no need to update your 
 items, as you can rely on the following new feature: 
-don't abort on small latex errors which the latex interpreter can fix
 itself (like missing $) (requested by S. Scharrer).
-the preamble and postamble used when processing the latex tags can now
 be customised by editing the files 'preamble' and 'postamble' in 
 <home dir>/.mnemosyne/latex.
-the command invoking dvipng to create images from latex can now be 
 customised by editing the file 'dvipng' in <home dir>/.mnemosyne/latex
-remember category and vice-versa settings across invocations when adding 
 items.
-add maximise button to add and edit items under Windows (thanks to
 pizzasource and S. Scharrer).
-respect setting 'number of grade 0 items to learn at once' to zero 
 (reported by pizzasource).
-fix word wrap when using left alignment (reported by TomC).