@@ -3,6 +3,8 @@ MNEMOSYNE 0.9.10
 (Note that for Windows users we recommend uninstalling the previous 
 version before doing an upgrade.)
 
+-add feature to insert a picture or a sound tag by using a file selector. 
+ Accessed through popup-menu or keyboard short-cuts.
 -respect duplicate handling configuration options when importing (reported 
  by lebowski_404).
 -changed shortcut for 'Show statistics' from Alt-S to Ctrl-S so as not to
